# Bachelor_Thesis_Karlsruhe_2024

./: README.md
mpp/: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakeOptionMacros.txt  Dockerfile  LICENSE  README.md  init.sh  metadata.json
mpp/bash/: paper1.sh  pde_paper1.sh  run1.sh  run1w.sh  run2.sh  run2w.sh  run3.sh  run3w.sh  run_w.sh  scalingTest.sh  uniform.sh
mpp/conf/: MLMC_acoustic_ST.conf  MLMC_acoustic_time_stepping.conf  MLMC_elliptic.conf  MLMC_transport.conf  MLMC_transport_diffusion.conf  SC_acoustic.conf  SC_elliptic.conf  SC_kl_acoustic.conf  SC_transport.conf  SGD.conf  SGD_elliptic.conf  SMC_elliptic.conf  ST_3DTest.conf  ST_Experiment1.conf  ST_Experiment2.conf  ST_Experiment3.conf  ST_ExperimentA.conf  ST_ExperimentBase.conf  ST_FWI_Example.conf  ST_MultiExperiment3.conf  ST_Polynomial.conf  ST_acoustic.conf  ST_acoustic_C2_L.conf  ST_acoustic_damping.conf  ST_acoustic_proc_test.conf  ST_adaptive.conf  ST_bm.conf  ST_circularInclusion.conf  ST_crc.conf  ST_fgmres.conf  ST_interval.conf  ST_intervalFMG.conf  ST_m2g.conf  ST_marmousi.conf  ST_marmousi2.conf  ST_marmousiAdapt5.conf  ST_marmousiConst.conf  ST_pollution.conf  ST_quadratic.conf  ST_riemann.conf  (+25 more)
mpp/conf/geo/: Cake3D.geo  Cook19Triangles.geo  FicheraCube.geo  FicheraTet.geo  Gelfand.geo  L-shape.geo  Line.geo  QD.geo  Rock.geo  Rock_emtpy.geo  ST_123.geo  ST_BenchmarkZiegler.geo  ST_QD.geo  ST_QD2.geo  ST_SeismogramGrid.geo  ST_deformed.geo  ST_interval.geo  ST_large_rectangle.geo  ST_marmousi1.geo  ST_marmousi1_9000x3000_l1000.geo  ST_marmousi2_squares_abgeschnitten.geo  ST_marmousi2_squares_abgeschnitten_PML.geo  ST_marmousi_squares.geo  ST_marmousi_squares_3x3.geo  ST_squ_simple.geo  ST_squ_tunnel_wo_layer.geo  ST_square-1x1.geo  ST_square2triangles.geo  ST_tri_simple.geo  ST_tri_simple2.geo  ST_tri_simple3.geo  ST_tri_tunnel_wo_layer.geo  ST_tube_squares.geo  ST_tube_triangles.geo  ST_tunnel.geo  ST_unit_cube.geo  ST_unit_cube_nt10.geo  ST_unit_cube_shifted.geo  ST_unit_square.geo  ST_unit_square_centered.geo  (+22 more)
mpp/cxsc/: CMakeLists.txt  cxscconf.h
mpp/cxsc/examples/: CMakeLists.txt
mpp/cxsc/src/: _cxscfwd.hpp  cdot.cpp  cdot.hpp  cdot.inl  cidot.hpp  cidot.inl  cimath.cpp  cimath.hpp  cimatrix.cpp  cimatrix.hpp  cimatrix.inl  cinterval.cpp  cinterval.hpp  cinterval.inl  civeccmat.inl  civecimat.inl  civecrmat.inl  civector.cpp  civector.hpp  civector.inl  cmatrix.cpp  cmatrix.hpp  cmatrix.inl  complex.cpp  complex.hpp  complex.inl  cvecrmat.inl  cvector.cpp  cvector.hpp  cvector.inl  cxscconf.h  cxscmatr.hpp  cxscvect.hpp  dot.cpp  dot.hpp  errtest.cpp  except.cpp  except.hpp  idot.hpp  idot.inl  (+92 more)
mpp/doc/: MppCodeStyle.xml  addCommitMsgHook.sh  prepare-commit-msg
mpp/notebooks/SC/: UQ_SC_MC_Laplace.ipynb  df_alpha_2.pickle  df_length_4.pickle  df_mc_5.pickle  df_sc_1.pickle  df_sc_3.pickle  df_sc_5.pickle  plotting.py
mpp/notebooks/mlmc/: MLMC-Acoustic-Space-Time.ipynb  MLMC-Acoustic-Time-Stepping.ipynb  MLMC-Elliptic.ipynb  MLMC-Transport.ipynb
mpp/notebooks/mlsc/: kl-exapansion.ipynb  sc-acoustic.ipynb  sc-elliptic.ipynb  sc-transport.ipynb  sparse-grids.ipynb
mpp/notebooks/sgd/: SGD.ipynb  ocuq_elliptic.ipynb
mpp/notebooks/spacetime/: Circular.ipynb  Convergence.ipynb  DoubleMultigridTest.ipynb  FGMRES_Test.ipynb  GaussLobatto.ipynb  HyperparameterSearch.ipynb  ResultEvaluation.ipynb  RiemannProblem-Copy1.ipynb  RiemannProblem.ipynb  RiemannProblem_old.ipynb  RiemannResults.ipynb  ScalingTest.ipynb  Visualize.ipynb  saved.ipynb
mpp/notebooks/tutorial/: 1D-Exercises.ipynb  Acoustic-Exercises.ipynb  Elliptic-Exercises.ipynb  Hyperbolic-Exercises.ipynb  Introduction-Exercises.ipynb  Multigrid-Exercises.ipynb  Parabolic-Exercises.ipynb  plotting.py
mpp/pipeline/: .mluq-benchmark-on-horeka.yml  .mpp-ci-templates.yml  archive.sh  downstream.yml  mlmc-acoustic-space-time-on-horeka.yml  mlmc-acoustic-time-stepping-on-horeka.yml  mlmc-elliptic-on-horeka.yml  mlmc-notebooks.yml  mlmc-transport-on-horeka.yml  radar4mpp.py  sgd-elliptic-on-horeka.yml  spacetime-benchmarks-on-horeka.yml  tutorial-benchmark-on-horeka.yml  tutorial-notebooks.yml
mpp/python/: mluqmppy.py  mppyrun.py  plot_qmc_sg.py  sgdmppy.py
mpp/python/VtuBinaryHelpers/: ConvertVTUASCIIToBin.py  ConvertVTUtoXDMFTimeseries.py
mpp/python/mppy/: __init__.py  mppy.py
mpp/src/: CMakeLists.txt  Main.cpp  Main.hpp
mpp/src/lib0_basic/: CMakeLists.txt  GlobalDefinitions.hpp  Lapdef.hpp  Point.cpp  Point.hpp  m++.cpp  m++.hpp
mpp/src/lib1_math/: CMakeLists.txt  DataSet.cpp  DataSet.hpp  SymTensor.hpp  Tensor.hpp  TensorComponent.hpp  TensorRow.hpp  Transformation.cpp  Transformation.hpp  VectorField.hpp  VectorFieldComponent.cpp  VectorFieldComponent.hpp
mpp/src/lib2_mesh/: CMakeLists.txt
mpp/src/lib3_disc/: CMakeLists.txt
mpp/src/lib4_fem/: CMakeLists.txt
mpp/src/lib5_solve/: Assemble.cpp  Assemble.hpp  CMakeLists.txt
mpp/src/lib6_app/: CMakeLists.txt
mpp/src/lib7_uq/: CMakeLists.txt
mpp/submodules/: ggt Rechner.py
mpp/submodules/sprng5/: README.md
mpp/tests/: BENCHMARK.md  CMakeLists.txt  TestEnvironment.cpp  TestEnvironment.hpp
mpp/tests/test0_basic/: CMakeLists.txt  TestEnvironmentLib0.hpp  TestIAPoint.cpp  TestPoint.cpp  TestPointComparison.cpp
mpp/tests/test1_math/: BenchVectorField.cpp  CMakeLists.txt  TestEnvironmentLib1.hpp  TestIASymTensor.cpp  TestIATensor.cpp  TestIAVectorField.cpp  TestSymTensor.cpp  TestTensor.cpp  TestTensorComponent.cpp  TestTensorInvert.cpp  TestTensorInvert.hpp  TestTensorRow.cpp  TestVectorField.cpp  TestVectorFieldComponent.cpp
mpp/tests/test2_mesh/: BenchCellCollections.cpp  CMakeLists.txt  TestEnvironmentLib2.hpp
mpp/tests/test3_disc/: CMakeLists.txt  TestEnvironmentLib3.hpp
mpp/tests/test4_fem/: CMakeLists.txt  TestEnvironmentLib4.hpp  TestTransfers.cpp  TestTransfers.hpp
mpp/tests/test5_solve/: CMakeLists.txt  TestEnvironmentLib5.hpp
mpp/tools/: clean_libnames.py  create_celltests.py  generate_cell_testdata.py  generate_tensor_testdata.py  print_quadratures.py  seismogram_lib.py  seismogram_lib2.py
(+992 files in other folders)
